Code modernization